--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,20 +18,20 @@ jobs:
       with:
         go-version: 1.16
 
-    - name: Setup auth-service
-      run: cd auth-service && go build . && cd tests/ && go test .
+    - name: Deploy auth-service
+      run: cd auth-service && sh deploy.sh
 
-    - name: Setup follow-service
-      run: cd ../../follow-service && go build . && cd tests/ && go test .
+    - name: Deploy follow-service
+      run: cd follow-service && sh deploy.sh
     
-    - name: Setup image-service
-      run: cd ../../image-service && go build . && cd tests/ && go test .
+    - name: Deploy image-service
+      run: cd image-service && sh deploy.sh
     
-    - name: Setup post-service
-      run: cd ../../post-service && go build . && cd tests/ && go test .
+    - name: Deploy post-service
+      run: cd post-service && sh deploy.sh
     
-    - name: Setup user-service
-      run: cd ../../user-service && go build . && cd tests/ && go test .
+    - name: Deploy user-service
+      run: cd user-service && sh deploy.sh
 
 
 
