--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,16 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.16
-
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@master
+      with:
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
+        #service_account_key: ${{ secrets.GCP_SA_KEY }}
+        export_default_credentials: true
+        
+    - name: Use gcloud CLI
+      run: gcloud info
+  
     - name: Deploy auth-service
       run: cd auth-service && sh deploy.sh
 
