--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,12 +17,17 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.16
-    - name: Set up Cloud SDK
-      uses: google-github-actions/setup-gcloud@master
+        
+    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
       with:
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
+        service_account_email: ${{ secrets.GCP_EMAIL }}
         service_account_key: ${{ secrets.GCP_SA_KEY }}
-        #export_default_credentials: true
+        export_default_credentials: true
+    
+    # Configure Docker with Credentials
+    - name: Configure Docker
+      run: |
+        gcloud auth configure-docker
         
     - name: Use gcloud CLI
       run: gcloud info
