--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,8 +11,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-
+    #- uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@master
+      
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
