--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,28 +11,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    #- uses: actions/checkout@v2
-    - name: Checkout
-      uses: actions/checkout@master
-      
+    - uses: actions/checkout@v2
+
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
         go-version: 1.16
         
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-      with:
-        service_account_email: ${{ secrets.GCP_EMAIL }}
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-        export_default_credentials: true
+    - name: printenv
+      run: printenv
     
-    # Configure Docker with Credentials
-    - name: Configure Docker
-      run: |
-        gcloud auth configure-docker
-        
-    - name: Use gcloud CLI
-      run: gcloud info
+    - name: random
+      run: echo $POSTGRE_HOST
   
     - name: Deploy auth-service
       run: cd auth-service && sh deploy.sh
